uk editor 고도화 작업 중

--- a/assets/lib/css/less/ayu-mirage.less
+++ b/assets/lib/css/less/ayu-mirage.less
@@ -66,7 +66,7 @@
 	}
 
 	//gutter --------------------------------------------------------------------------------
-	@gutter_size:46px;
+	@gutter_size:44px;
 
 	.CodeMirror-gutters,
 	.CodeMirror-gutter {
@@ -80,7 +80,7 @@
 	}
 	.CodeMirror-gutter-elt {
 		display:inline-block;
-		width:100% !important; padding-right:10px;
+		width:100% !important; padding-right:8px;
 		font-size:13px;
 		box-sizing:border-box;
 		background:@bg;
@@ -113,7 +113,7 @@
 
 
 
-@media(max-width:@screen-lg-max){
+@media(max-width:@screen-sm-max){
 	.cm-s-ayu-mirage {
 		.CodeMirror-cursor { height:16px !important;}
 
