--- a/assets/lib/css/less/ayu-mirage.less
+++ b/assets/lib/css/less/ayu-mirage.less
@@ -14,6 +14,8 @@
 @keyword: #e7862f;
 @drag: #214283;
 
+.uk_editor
+.code_wrap
 .cm-s-ayu-mirage {
 	&.CodeMirror { background: @bg; color: @gray; } //cbccc6
 	//div.CodeMirror-selected { background: fade(@number, 12%); } //34455a
@@ -108,6 +110,7 @@
 	}
 
 	//--------------------
+	//.CodeMirror-line {background:red; margin-right:10px;}
 	//.CodeMirror-scroll {margin:0 !important;}
 }
 
